flussonic (3.66.4)

  * Added all interfaces to traffic pulse
  * New RTSP reader code

flussonic (3.66.3)

  * Added disk index to archive files for fast load
  * Admin page now can be protected with password
  * Reconfigure doesn't stop HTTP acceptor anymore
  * Proper handling of invalid config: better log on start and refuse to reconfigure

flussonic (3.66.2)

  * Mpegts handler disconnects old connection with same user_id. EV:25120
  * Fixed bug with mp4 last gop. EV:25123

flussonic (3.66.1)

  * initial commit for publishing video via mpegts_handler
  * remove source of flu_stream
  * show traffic in admin panel
  * collect traffic statistics to pulse subsystem
  * switch to lager logging with new log layout

flussonic (3.65.7)

  * fixed monotonic RTMP frame sending
  * start RTMP stream from keyframe
  * API to restart stream via HTTP
  * frames reordering in RTSP reader


flussonic (3.65.6)

  * timeshift:// fix for handling broken archive files


flussonic (3.65.5)

  * change output stream if input stream is changing (audio added, etc.)
  * mpegts_handler now doesn't stop and sends null-packets
  * fixed bug when flu_rtmp playing started invalid stream names
  * stream now doesn't die directly after publisher exits
  * added timeshift:// source type
  * visualize clearing DVR in admin panel
  * fixed auth_http_backend and flu_rtmp integration

flussonic (3.65.4)

  * added support for h264 yuv422 sps parsing
  * kill old connections if new connection with the same user_id is unique
  * RTSP should skip RTCP properly

flussinic (3.65.3)

  * return user_id in flu_session:list() and show it in admin panel
  * fixed parsing of m3u8 playlists with CRLF

flussonic (3.65.2)

  * session list in admin panel should update, not reload
  * fixed rtmp disconnect handling in flu_sessions

flussonic (3.65.1)

  * show opened user sessions in admin panel
  * properly handle {rtmp,Port} config change
  * flu_stream now makes frame flow monotonic via flu_monotone