@@ -1,11 +1,6 @@
 Документация
 ------------
 
-* Написать, как защищать админку
-* Добавить про restart stream API
-* Добавить про новую раскладку логов
-* В troubleshooting написать про то, что log/console/erlang.log работает раньше
-* Добавить про новый timeshift
 * Пароль на публикацию по RTMP один на префикс
 * Добавить про flv publish??
 * Рассказать про структуру rtmp урлов
@@ -18,6 +13,8 @@
 
 * Периодический перезапрос авторизации на открытых персистентных сессиях
 * Подумать как отдавать метадату с временем текущего сегмента
+* mpeg2coder
+* Другие авторизационные бекенды
 
 Архив
 -----
