@@ -1,7 +1,7 @@
 {application, flussonic,
  [
   {description, ""},
-  {vsn, "3.66.4"},
+  {vsn, "3.66.5"},
   {registered, []},
   {applications, [
                   kernel,
