@@ -1,3 +1,7 @@
+flussonic (3.66.5)
+
+  * Added mpegts http basic authentication
+
 flussonic (3.66.4)
 
   * Added all interfaces to traffic pulse
